# mini-llm-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: config.h  model.h  ops_cpu.h  ops_cuda.cuh  sampler.h  tensor.h
src/: main.cpp  model.cpp  ops_cpu.cpp  ops_cuda.cu  sampler.cpp
